# fixed-capacity-set

./: CMakeLists.txt  PROBLEM.md  README.md
include/: set.hpp
src/: main.cpp
tests/: set_tests.cpp
